--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
-    "vendor": "itgloberspartnercl",
-    "name": "whatsapp-button",
-    "version": "0.0.1",
-    "title": "whatsapp Button Component",
-    "description": "Botón de componente para Whatsapp que recibirá un telefono, un logo y un mensaje",
-    "builders": {
-        "react": "3.x",
-        "messages": "1.x",
-        "docs": "0.x",
-        "store": "0.x"
-    },
-    "dependencies": {},
-    "registries": [
-        "smartcheckout"
-    ],
-    "policies": [],
-    "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
+  "vendor": "itgloberspartnercl",
+  "name": "whatsapp-button",
+  "version": "0.0.1",
+  "title": "whatsapp Button Component",
+  "description": "Botón de componente para Whatsapp que recibirá un telefono, un logo y un mensaje",
+  "builders": {
+    "react": "3.x",
+    "messages": "1.x",
+    "docs": "0.x",
+    "store": "0.x"
+  },
+  "dependencies": {
+    "vtex.css-handles": "0.x"
+  },
+  "registries": ["smartcheckout"],
+  "policies": [],
+  "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
