--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "CHANGE_ME",
-  "version": "0.0.0",
+  "name": "whatsapp-button",
+  "version": "0.0.1",
   "scripts": {
     "test": "vtex-test-tools test"
   },
@@ -12,6 +12,7 @@
     "react-intl": "^3.12.0"
   },
   "devDependencies": {
+    "@vtex/css-handles": "^1.1.3",
     "@apollo/react-testing": "^3.1.3",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.8",
@@ -20,6 +21,7 @@
     "@vtex/tsconfig": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
     "graphql": "^14.6.0",
-    "typescript": "^3.9.6"
+    "prop-types": "^15.8.1",
+    "typescript": "3.9.7"
   }
 }
